templates/eventstreams_template.yaml
---
# Source: eventstreams/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eventstreams-release-name
  labels:
    app: eventstreams
    chart: eventstreams-0.7.6
    release: release-name
    heritage: Helm
spec:
  podSelector:
    matchLabels:
      app: eventstreams
      chart: eventstreams-0.7.6
      release: release-name
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8092
          protocol: TCP
        - port: 9102
          protocol: TCP
---
# Source: eventstreams/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventstreams-release-name
  labels:
    app: eventstreams
    chart: eventstreams-0.7.6
    release: release-name
    heritage: Helm
spec:
  type: NodePort
  selector:
    app: eventstreams
    chart: eventstreams-0.7.6
    routed_via: release-name
  ports:
    - name: eventstreams-http
      targetPort: 8092
      port: 8092
      nodePort: 30892
    # If testing monitoring export the service-runner prometheus metrics listen port
    - name:  prometheus-eventstreams
      targetPort: 9102
      port: 9102
      nodePort: 31102
---
# Source: eventstreams/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventstreams-release-name
  labels:
    app: eventstreams
    chart: eventstreams-0.7.6
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: eventstreams
      release: release-name
  replicas: 1
  template:
    metadata:
      labels:
        app: eventstreams
        chart: eventstreams-0.7.6
        release: release-name
        routed_via: release-name
      annotations:
        checksum/config: ae96ccceea4dbd2aad51b6b84d7e25524451db38d553cf7005cd84e582fc4dd9
        checksum/secrets: 96d9e3a159a46768fbc44fc006952a494d6470014e4bafb390c2f5b9c264570e
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"        
    spec:
      containers:
        # The main application container
        - name: eventstreams
          image: "docker-registry.wikimedia.org/wikimedia/mediawiki-services-eventstreams:latest"
          imagePullPolicy: IfNotPresent
          command:
            - nodejs
          args:
            - /srv/service/server.js
            - -c
            - /etc/eventstreams/config.yaml
          ports:
            - containerPort: 8092
          livenessProbe:
            tcpSocket:
              port: 8092
          readinessProbe:
            httpGet:
              path: /_info
              port: 8092
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
          volumeMounts:
            - name: eventstreams-config-volume
              mountPath: /etc/eventstreams        
      volumes:
        - name: eventstreams-config-volume
          configMap:
            name: eventstreams-release-name-config
---
# Source: eventstreams/templates/tests/test-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  name: 'eventstreams-service-checker'
  annotations:
    "helm.sh/hook": test
    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
spec:
  containers:
    - name: 'eventstreams-service-checker'
      image: "docker-registry.wikimedia.org/service-checker"
      imagePullPolicy: IfNotPresent
      args: ["-t", "5", '$(EVENTSTREAMS_RELEASE_NAME_SERVICE_HOST)', 'http://eventstreams-release-name:8092']
  dnsPolicy: ClusterFirst
  restartPolicy: Never
